# blazing_task

./: README.md
foundry/: .gitignore  foundry.toml
foundry/src/: BlazingContract.sol
foundry/test/: BlazingContract.t.sol
rust/: Cargo.toml  dev.http
rust/src/: main.rs  rest.rs
